force-app/main/default/objects/TTS_Applicant__c/TTS_Applicant__c.object-meta.xml
<CustomObject>
    <description>Represents an organisation or individual applying for or holding an interest in a protection record.</description>
    <label>Applicant</label>
    <nameField>
        <displayFormat>PA-{00000}</displayFormat>
        <label>Applicant ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Applicants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>