force-app/main/default/objects/TTS_Applicant__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identifies the organisation serving as an applicant for the related protection.</description>
    <inlineHelpText>Select the applicant organisation; use Individual Contact when the applicant is a person.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Patent Applications</relationshipLabel>
    <relationshipName>Applicants</relationshipName>
    <type>Lookup</type>
</CustomField>