force-app/main/default/objects/TTS_Applicant__c/fields/Individual_Contact__c.field-meta.xml
<CustomField>
    <fullName>Individual_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identifies the individual Contact serving as an applicant for the related protection.</description>
    <inlineHelpText>Select the applicant Contact when the applicant is a person; use Account for an organisation.</inlineHelpText>
    <label>Individual Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Applicants</relationshipLabel>
    <relationshipName>Applicants</relationshipName>
    <type>Lookup</type>
</CustomField>