force-app/main/default/objects/TTS_Applicant__c/fields/IP_External_Reference__c.field-meta.xml
<CustomField>
    <fullName>IP_External_Reference__c</fullName>
    <description>Stores the external reference for this applicant&apos;s involvement in the protection.</description>
    <externalId>true</externalId>
    <inlineHelpText>Enter the applicant reference used by the external filing or source system.</inlineHelpText>
    <label>External Reference</label>
    <length>50</length>
    <type>Text</type>
</CustomField>