force-app/main/default/objects/TTS_Applicant__c/fields/Lead_Applicant__c.field-meta.xml
<CustomField>
    <fullName>Lead_Applicant__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this applicant is the lead applicant for the related protection.</description>
    <inlineHelpText>Select when this is the primary or lead applicant for the protection.</inlineHelpText>
    <label>Lead Applicant</label>
    <type>Checkbox</type>
</CustomField>