force-app/main/default/objects/TTS_Applicant__c/fields/Protection__c.field-meta.xml
<CustomField>
    <fullName>Protection__c</fullName>
    <description>Master-detail relationship linking the applicant to its parent Protection record.</description>
    <inlineHelpText>Select the protection for which this organisation or individual is an applicant.</inlineHelpText>
    <label>Protection</label>
    <referenceTo>TTS_Protection__c</referenceTo>
    <relationshipLabel>Applicants</relationshipLabel>
    <relationshipName>Applicants</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>