force-app/main/default/objects/TTS_Applicant__c/fields/Protection_Title__c.field-meta.xml
<CustomField>
    <fullName>Protection_Title__c</fullName>
    <description>Formula displaying the Title from the parent Protection record.</description>
    <formula>Protection__r.Title__c</formula>
    <inlineHelpText>Read-only title inherited from the related Protection.</inlineHelpText>
    <label>Protection Title</label>
    <type>Text</type>
</CustomField>