force-app/main/default/objects/TTS_Applicant__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Classifies the applicant&apos;s legal or organisational role for the protection.</description>
    <inlineHelpText>Select the category that best describes the applicant.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Corporate Assignee</fullName>
            </value>
            <value>
                <fullName>Educational Institution</fullName>
            </value>
            <value>
                <fullName>Foreign Applicant</fullName>
            </value>
            <value>
                <fullName>Government Agency</fullName>
            </value>
            <value>
                <fullName>Individual Inventor</fullName>
            </value>
            <value>
                <fullName>Joint Inventor</fullName>
            </value>
            <value>
                <fullName>Non-profit Organisation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>